rust/surrealdb-orm-tests/tests/snapshots/geometry__multipolygon.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: "serde_json::to_string(&multi_polygon).unwrap()"
---
[{"exterior":[{"x":0.0,"y":0.0},{"x":1.0,"y":1.0},{"x":2.0,"y":2.0},{"x":0.0,"y":0.0}],"interiors":[]},{"exterior":[{"x":3.0,"y":3.0},{"x":4.0,"y":4.0},{"x":5.0,"y":5.0},{"x":3.0,"y":3.0}],"interiors":[]},{"exterior":[{"x":-111.0,"y":45.0},{"x":-111.0,"y":41.0},{"x":-104.0,"y":41.0},{"x":-104.0,"y":45.0},{"x":-111.0,"y":45.0}],"interiors":[[{"x":-110.0,"y":44.0},{"x":-110.0,"y":42.43},{"x":-105.0,"y":42.0},{"x":-105.0,"y":44.0},{"x":-110.0,"y":44.0}]]}]
