rust/surrealdb-orm-tests/tests/snapshots/geometry__point-2.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: point
---
Point(
    Coord {
        x: 40.02,
        y: 116.34,
    },
)
