rust/surrealdb-orm-tests/tests/snapshots/geometry__polygon_with_exterior_interior-2.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: res_string
---
{"id":{"tb":"test_polygon","id":{"Number":32}},"homePolygon":{"exterior":[{"x":-111.0,"y":45.0},{"x":-111.0,"y":41.0},{"x":-104.0,"y":41.0},{"x":-104.0,"y":45.0},{"x":-111.0,"y":45.0}],"interiors":[[{"x":-110.0,"y":44.0},{"x":-110.0,"y":42.0},{"x":-105.0,"y":42.0},{"x":-105.0,"y":44.0},{"x":-110.0,"y":44.0}]]}}
